--- a/index.html
+++ b/index.html
@@ -7,7 +7,27 @@
 </head>
 
 <body>
-    <div class="container" id="intro"></div>
+    <div class="container" id="intro">
+        <div class="banner">
+            <div class="title">
+                EPFL Sustainability Resources
+            </div>
+            <div class="lang">
+                EN / FR
+            </div>
+        </div>
+        <div class="appetizer">
+            <div class="text">
+                <h>Discover sustainability on your campus!<h>
+                <p>EPFL and UNIL are committed to sustainability and have many resources available to students and
+                    staff. This website aims to provide a comprehensive list of these resources, and to make them
+                    easily accessible to all.</p>
+            </div>
+            <div class="image">
+                <img src="logo/EPFL background.jpg" alt="Image">
+            </div>
+        </div>
+    </div>
     <div class="container" id="content">
         <!-- Category 1 : Inform Yourself-->
         <div class="bubble" id="bubble1">
