--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         <div class="appetizer">
             <div class="text">
                 <h1>Discover sustainability on your campus!<h1>
-                        <p>EPFL and UNIL are committed to sustainability and have many resources available to students
-                            and
-                            staff. This website aims to provide a comprehensive list of these resources, and to make
+                        <p>EPFL is committed to improve sustainability for students and has many resources and staff
+                            available for you. This website aims to provide a comprehensive list of these resources, and
+                            to make
                             them
                             easily accessible to all.</p>
             </div>
