--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         <div class="bubble" id="bubble1">
             <img src="logo\Apprendre.png" alt="Image">
             <span>Inform Yourself</span>
+            <div class="border" id="border1"></div>
             <!-- EPFL Courses -->
             <div class="bubble smaller" id="EPFLCourses">
                 <a
@@ -102,6 +103,7 @@
         <div class="bubble" id="bubble2">
             <img src="logo\Services.png" alt="Image">
             <span>At Your Service</span>
+            <div class="border" id="border2"></div>
             <!-- Coaching Sustainability -->
             <div class="bubble smaller" id="CoachingSustainability">
                 <a href="https://people.epfl.ch/michka.melo">
@@ -247,6 +249,7 @@
         <div class="bubble" id="bubble3">
             <img src="logo\Community.png" alt="Image">
             <span>Take Action</span>
+            <div class="border" id="border3"></div>
             <!-- La Convergence -->
             <div class="bubble smaller" id="LaConvergence">
                 <a href="https://laconvergence.ch/">
@@ -403,6 +406,7 @@
             <img src="logo\Startup.png" alt="Image">
             <span>Launch</span>
             <span>Your Project</span>
+            <div class="border" id="border4"></div>
             <!-- Make -->
             <div class="bubble smaller" id="Make">
                 <a
@@ -477,6 +481,7 @@
         <div class="bubble" id="bubble5">
             <img src="logo\Sain.png" alt="Image">
             <span>Take Care</span>
+            <div class="border" id="border5"></div>
             <!-- Sports center EPFL-UNIL -->
             <div class="bubble smaller" id="SportscenterEPFL-UNIL">
                 <a href="https://sport.unil.ch/">
@@ -538,7 +543,6 @@
             </div>
         </div>
     </div>
-    <script src="script.js"></script>
 </body>
 
 </html>
