--- a/website3.html
+++ b/website3.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>EPFL/UNIL Sustainability Resources</title>
-    <link rel="stylesheet" href="auto_style.css">
+    <link rel="stylesheet" href="website3.css">
 </head>
 
 <body>
@@ -544,5 +544,4 @@
         </div>
     </div>
 </body>
-
 </html>
