--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="bubble smaller" id="EPFLCourses">
                 <a
                     href="https://www.epfl.ch/about/sustainability/fr/durabilite-dans-leducation/programmes-detudes-cours-et-moocs/">
-                    <img src="logo\EPFLf_logo transparent.png" alt="Image">
+                    <img src="logo\EPFL courses.png" alt="Image">
                 </a>
                 <div class="text-description">
                     <h3>EPFL Courses</h3>
@@ -210,7 +210,7 @@
             <!-- Point Smart (Cellphones) -->
             <div class="bubble smaller" id="PointSmartCellphones">
                 <a href="https://www.epfl.ch/about/sustainability/sustainable-it/point-smart/">
-                    <img src="logo\PointSmart.png" alt="Image">
+                    <img src="logo\point smart title.png" alt="Image">
                 </a>
                 <div class="text-description">
                     <h3>Point Smart (Cellphones)</h3>
@@ -411,7 +411,7 @@
             <div class="bubble smaller" id="Make">
                 <a
                     href="https://www.epfl.ch/education/educational-initiatives/discovery-learning-program-2/interdisciplinary-projects/">
-                    <img src="logo\EPFLf_logo transparent.png" alt="Image">
+                    <img src="logo\EPFL Make.png" alt="Image">
                 </a>
                 <div class="text-description">
                     <h3>Make</h3>
