--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
                 <h1>Discover sustainability on your campus!<h1>
                         <p>EPFL is committed to improve sustainability for students and has many resources and staff
                             available for you. This website aims to provide a comprehensive list of these resources, and
-                            to make
-                            them
-                            easily accessible to all.</p>
+                            to make them easily accessible to all.</p>
+                        <p>There are other existing opportunities on the campus, don’t hesitate to contact sustainability@epfl.ch  for more information!</p>
             </div>
             <div class="image">
                 <img src="logo/EPFL background.jpg" alt="Image">
+                <p>Projet SHS – EPFL, Mehdi El Bouari & Ke Li, 2023</p>
             </div>
         </div>
     </div>
