--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                         <p>EPFL is committed to improve sustainability for students and has many resources and staff
                             available for you. This website aims to provide a comprehensive list of these resources, and
                             to make them easily accessible to all.</p>
-                        <p>There are other existing opportunities on the campus, don’t hesitate to contact sustainability@epfl.ch  for more information!</p>
+                        <p>There are other existing opportunities on the campus, don’t hesitate to contact <a href="mailto:sustainability@epfl.ch">sustainability@epfl.ch</a> for more information!</p>
             </div>
             <div class="image">
                 <img src="logo/EPFL background.jpg" alt="Image">
@@ -35,7 +35,7 @@
         <!-- Category 1 : Inform Yourself-->
         <div class="bubble" id="bubble1">
             <img src="logo\Apprendre.png" alt="Image">
-            <span>Inform Yourself</span>
+            <a href="website4.html"><span>Inform Yourself</span></a>
             <div class="border" id="border1"></div>
             <!-- EPFL Courses -->
             <div class="bubble smaller" id="EPFLCourses">
