--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
                         <p>EPFL is committed to improve sustainability for students and has many resources and staff
                             available for you. This website aims to provide a comprehensive list of these resources, and
                             to make them easily accessible to all.</p>
-                        <p>There are other existing opportunities on the campus, don’t hesitate to contact <a href="mailto:sustainability@epfl.ch">sustainability@epfl.ch</a> for more information!</p>
+                        <p>There are other existing opportunities on the campus, don’t hesitate to contact <a
+                                href="mailto:sustainability@epfl.ch">sustainability@epfl.ch</a> for more information!
+                        </p>
             </div>
             <div class="image">
                 <img src="logo/EPFL background.jpg" alt="Image">
@@ -41,7 +43,8 @@
             <div class="bubble smaller" id="EPFLCourses">
                 <a
                     href="https://www.epfl.ch/about/sustainability/fr/durabilite-dans-leducation/programmes-detudes-cours-et-moocs/">
-                    <img src="logo\EPFL courses.png" alt="Image">
+                    <!-- <img src="logo\EPFL courses.png" alt="Image"> -->
+                    <span>EPFL COURSES</span>
                 </a>
                 <div class="text-description">
                     <h3>EPFL Courses</h3>
@@ -108,7 +111,8 @@
             <!-- Coaching Sustainability -->
             <div class="bubble smaller" id="CoachingSustainability">
                 <a href="https://people.epfl.ch/michka.melo">
-                    <img src="logo\Coaching sustainability.png" alt="Image">
+                    <!-- <img src="logo\Coaching sustainability.png" alt="Image"> -->
+                    <span>Coaching Sustainability</span>
                 </a>
                 <div class="text-description">
                     <h3>Coaching Sustainability</h3>
@@ -146,7 +150,8 @@
             <!-- Point vélo -->
             <div class="bubble smaller" id="Pointvélo">
                 <a href="https://www.epfl.ch/campus/mobility/mobility-and-travel/commuting/point-velo/">
-                    <img src="logo\point velo title.png" alt="Image">
+                    <!-- <img src="logo\point velo title.png" alt="Image"> -->
+                    <span>Point vélo</span>
                 </a>
                 <div class="text-description">
                     <h3>Point vélo</h3>
@@ -211,7 +216,8 @@
             <!-- Point Smart (Cellphones) -->
             <div class="bubble smaller" id="PointSmartCellphones">
                 <a href="https://www.epfl.ch/about/sustainability/sustainable-it/point-smart/">
-                    <img src="logo\point smart title.png" alt="Image">
+                    <!-- <img src="logo\point smart title.png" alt="Image"> -->
+                    <span>Point Smart</span>
                 </a>
                 <div class="text-description">
                     <h3>Point Smart (Cellphones)</h3>
@@ -412,7 +418,8 @@
             <div class="bubble smaller" id="Make">
                 <a
                     href="https://www.epfl.ch/education/educational-initiatives/discovery-learning-program-2/interdisciplinary-projects/">
-                    <img src="logo\EPFL Make.png" alt="Image">
+                    <!-- <img src="logo\EPFL Make.png" alt="Image"> -->
+                    <span>MAKE</span>
                 </a>
                 <div class="text-description">
                     <h3>Make</h3>
@@ -509,7 +516,8 @@
             <!-- Trust and Support Network (TSN) -->
             <div class="bubble smaller" id="TrustandSupportNetworkTSN">
                 <a href="https://www.epfl.ch/campus/community/trust-and-support-network/">
-                    <img src="logo\Trust-support-network-epfl-.png" alt="Image">
+                    <!-- <img src="logo\Trust-support-network-epfl-.png" alt="Image"> -->
+                    <span>TSN</span>
                 </a>
                 <div class="text-description">
                     <h3>Trust and Support Network (TSN)</h3>
@@ -522,7 +530,8 @@
             <!-- Guided meditation -->
             <div class="bubble smaller" id="Guidedmeditation">
                 <a href="https://www.epfl.ch/campus/spiritual-care/activites/meditation/">
-                    <img src="logo\meditation.png" alt="Image">
+                    <!-- <img src="logo\meditation.png" alt="Image"> -->
+                    <span>Guided meditation</span>
                 </a>
                 <div class="text-description">
                     <h3>Guided meditation</h3>
@@ -535,7 +544,8 @@
             <div class="bubble smaller" id="ForêtdeDorigny">
                 <a
                     href="https://www.google.com/maps/place/For%C3%AAt+de+Dorigny/@46.5233077,6.578139,15z/data=!4m2!3m1!1s0x0:0x72d0e6ee0ae1dd4c?sa=X&ved=2ahUKEwiqx5nplcL-AhVPhf0HHTw7AHwQ_BJ6BAhVEAg">
-                    <img src="logo\forest.png" alt="Image">
+                    <<img src="logo\forest.png" alt="Image">
+                    <!-- <span>Dorigny Forest</span> -->
                 </a>
                 <div class="text-description">
                     <h3>Forêt de Dorigny</h3>
