--- a/index.html
+++ b/index.html
@@ -544,7 +544,7 @@
             <div class="bubble smaller" id="ForêtdeDorigny">
                 <a
                     href="https://www.google.com/maps/place/For%C3%AAt+de+Dorigny/@46.5233077,6.578139,15z/data=!4m2!3m1!1s0x0:0x72d0e6ee0ae1dd4c?sa=X&ved=2ahUKEwiqx5nplcL-AhVPhf0HHTw7AHwQ_BJ6BAhVEAg">
-                    <<img src="logo\forest.png" alt="Image">
+                    <img src="logo\forest.png" alt="Image">
                     <!-- <span>Dorigny Forest</span> -->
                 </a>
                 <div class="text-description">
