--- a/website_test.html
+++ b/website_test.html
@@ -19,10 +19,12 @@
         <div class="appetizer">
             <div class="text">
                 <h1>Discover sustainability on your campus!<h1>
-                        <p>EPFL is committed to improve sustainability for students and has many resources and staff
-                            available for you. This website aims to provide a comprehensive list of these resources, and
-                            to make them easily accessible to all.</p>
-                        <p>There are other existing opportunities on the campus, don’t hesitate to contact sustainability@epfl.ch  for more information!</p>
+                <p>EPFL is committed to improve sustainability for students and has many resources and staff
+                    available for you. This website aims to provide a comprehensive list of these resources, and
+                    to make them easily accessible to all.</p>
+                <p>There are other existing opportunities on the campus, don’t hesitate to contact <a
+                        href="mailto:sustainability@epfl.ch">sustainability@epfl.ch</a> for more information!
+                </p>
             </div>
             <div class="image">
                 <img src="logo/EPFL background.jpg" alt="Image">
