--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
         <div class="appetizer">
             <div class="text">
-                <h1>Discover sustainability on your campus!<h1>
+                <h1>Discover sustainability on your campus!</h>
                 <p>EPFL is committed to improve sustainability for students and has many resources and staff
                     available for you. This website aims to provide a comprehensive list of these resources, and
                     to make them easily accessible to all.</p>
