--- a/index.html
+++ b/index.html
@@ -20,11 +20,13 @@
         <div class="appetizer">
             <div class="text">
                 <h1>Discover sustainability on your campus!</h>
-                <p>EPFL is committed to improve sustainability for students and has many resources and staff
-                    available for you. This website aims to provide a comprehensive list of these resources, and
-                    to make them easily accessible to all.</p>
-                <p>There are other existing opportunities on the campus, don’t hesitate to contact <a
-                        href="mailto:sustainability@epfl.ch">sustainability@epfl.ch</a> for more information!
+                <p>There are many resources & staff available for students on EPFL campus regarding sustainability.
+                    This website, built by students (Mehdi El Bouari & Ke Li, 2023), aims to provide a comprehensive
+                    list of these resources, and to make them easily accessible to all.
+                </p>
+                <p>To get in touch with the sustainability education team about this site or for other reasons, don’t
+                    hesitate to contact <a href="mailto:sustainability@epfl.ch">sustainability@epfl.ch</a> for
+                    more information!
                 </p>
             </div>
             <div class="image">
@@ -37,14 +39,14 @@
         <!-- Category 1 : Inform Yourself-->
         <div class="bubble" id="bubble1">
             <img src="logo\Apprendre.png" alt="Image">
-            <a href="website4.html"><span>Inform Yourself</span></a>
+            <span>Inform Yourself</span>
             <div class="border" id="border1"></div>
             <!-- EPFL Courses -->
             <div class="bubble smaller" id="EPFLCourses">
                 <a
                     href="https://www.epfl.ch/about/sustainability/fr/durabilite-dans-leducation/programmes-detudes-cours-et-moocs/">
                     <!-- <img src="logo\EPFL courses.png" alt="Image"> -->
-                    <span>EPFL COURSES</span>
+                    <span>EPFL Courses</span>
                 </a>
                 <div class="text-description">
                     <h3>EPFL Courses</h3>
@@ -103,19 +105,19 @@
                 </div>
             </div>
         </div>
-        <!-- Category 2 : At Your Service-->
+        <!-- Category 2 : Enjoy Services-->
         <div class="bubble" id="bubble2">
             <img src="logo\Services.png" alt="Image">
-            <span>At Your Service</span>
+            <span>Enjoy Services</span>
             <div class="border" id="border2"></div>
-            <!-- Coaching Sustainability -->
+            <!-- Coaching in sustainability -->
             <div class="bubble smaller" id="CoachingSustainability">
                 <a href="https://people.epfl.ch/michka.melo">
                     <!-- <img src="logo\Coaching sustainability.png" alt="Image"> -->
-                    <span>Coaching Sustainability</span>
+                    <span>Coaching in sustainability</span>
                 </a>
                 <div class="text-description">
-                    <h3>Coaching Sustainability</h3>
+                    <h3>Coaching in sustainability</h3>
                     A team of coaches to support students in acquiring the skills and networks they need to work for
                     sustainability during their studies or once they graduate.
                 </div>
@@ -147,14 +149,14 @@
                     choice, in the same way as the professional interests or the personality of the participants.
                 </div>
             </div>
-            <!-- Point vélo -->
+            <!-- Point Vélo -->
             <div class="bubble smaller" id="Pointvélo">
                 <a href="https://www.epfl.ch/campus/mobility/mobility-and-travel/commuting/point-velo/">
                     <!-- <img src="logo\point velo title.png" alt="Image"> -->
-                    <span>Point vélo</span>
+                    <span>Point Vélo</span>
                 </a>
                 <div class="text-description">
-                    <h3>Point vélo</h3>
+                    <h3>Point Vélo</h3>
                     Point Vélo is the cornerstone of our efforts to encourage cycling. Located on our Lausanne campus,
                     it serves as a point of sale for new and used bikes and for cycling gear at reduced prices; it also
                     offers at-cost repairs and free bike mechanics classes. These products and services are available
