--- a/website_test.html
+++ b/website_test.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>EPFL/UNIL Sustainability Resources</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="website_test.css">
 </head>
 
@@ -18,12 +19,14 @@
         </div>
         <div class="appetizer">
             <div class="text">
-                <h1>Discover sustainability on your campus!<h1>
-                <p>EPFL is committed to improve sustainability for students and has many resources and staff
-                    available for you. This website aims to provide a comprehensive list of these resources, and
-                    to make them easily accessible to all.</p>
-                <p>There are other existing opportunities on the campus, don’t hesitate to contact <a
-                        href="mailto:sustainability@epfl.ch">sustainability@epfl.ch</a> for more information!
+                <h1>Discover sustainability on your campus!</h>
+                <p>There are many resources & staff available for students on EPFL campus regarding sustainability.
+                    This website, built by students (Mehdi El Bouari & Ke Li, 2023), aims to provide a comprehensive
+                    list of these resources, and to make them easily accessible to all.
+                </p>
+                <p>To get in touch with the sustainability education team about this site or for other reasons, don’t
+                    hesitate to contact <a href="mailto:sustainability@epfl.ch">sustainability@epfl.ch</a> for
+                    more information!
                 </p>
             </div>
             <div class="image">
@@ -42,7 +45,8 @@
             <div class="bubble smaller" id="EPFLCourses">
                 <a
                     href="https://www.epfl.ch/about/sustainability/fr/durabilite-dans-leducation/programmes-detudes-cours-et-moocs/">
-                    <img src="logo\EPFL courses.png" alt="Image">
+                    <!-- <img src="logo\EPFL courses.png" alt="Image"> -->
+                    <span>EPFL Courses</span>
                 </a>
                 <div class="text-description">
                     <h3>EPFL Courses</h3>
@@ -101,18 +105,19 @@
                 </div>
             </div>
         </div>
-        <!-- Category 2 : At Your Service-->
+        <!-- Category 2 : Enjoy Services-->
         <div class="bubble" id="bubble2">
             <img src="logo\Services.png" alt="Image">
-            <span>At Your Service</span>
+            <span>Enjoy Services</span>
             <div class="border" id="border2"></div>
-            <!-- Coaching Sustainability -->
+            <!-- Coaching in sustainability -->
             <div class="bubble smaller" id="CoachingSustainability">
                 <a href="https://people.epfl.ch/michka.melo">
-                    <img src="logo\Coaching sustainability.png" alt="Image">
+                    <!-- <img src="logo\Coaching sustainability.png" alt="Image"> -->
+                    <span>Coaching in sustainability</span>
                 </a>
                 <div class="text-description">
-                    <h3>Coaching Sustainability</h3>
+                    <h3>Coaching in sustainability</h3>
                     A team of coaches to support students in acquiring the skills and networks they need to work for
                     sustainability during their studies or once they graduate.
                 </div>
@@ -144,13 +149,14 @@
                     choice, in the same way as the professional interests or the personality of the participants.
                 </div>
             </div>
-            <!-- Point vélo -->
+            <!-- Point Vélo -->
             <div class="bubble smaller" id="Pointvélo">
                 <a href="https://www.epfl.ch/campus/mobility/mobility-and-travel/commuting/point-velo/">
-                    <img src="logo\point velo title.png" alt="Image">
+                    <!-- <img src="logo\point velo title.png" alt="Image"> -->
+                    <span>Point Vélo</span>
                 </a>
                 <div class="text-description">
-                    <h3>Point vélo</h3>
+                    <h3>Point Vélo</h3>
                     Point Vélo is the cornerstone of our efforts to encourage cycling. Located on our Lausanne campus,
                     it serves as a point of sale for new and used bikes and for cycling gear at reduced prices; it also
                     offers at-cost repairs and free bike mechanics classes. These products and services are available
@@ -212,7 +218,8 @@
             <!-- Point Smart (Cellphones) -->
             <div class="bubble smaller" id="PointSmartCellphones">
                 <a href="https://www.epfl.ch/about/sustainability/sustainable-it/point-smart/">
-                    <img src="logo\point smart title.png" alt="Image">
+                    <!-- <img src="logo\point smart title.png" alt="Image"> -->
+                    <span>Point Smart</span>
                 </a>
                 <div class="text-description">
                     <h3>Point Smart (Cellphones)</h3>
@@ -413,7 +420,8 @@
             <div class="bubble smaller" id="Make">
                 <a
                     href="https://www.epfl.ch/education/educational-initiatives/discovery-learning-program-2/interdisciplinary-projects/">
-                    <img src="logo\EPFL Make.png" alt="Image">
+                    <!-- <img src="logo\EPFL Make.png" alt="Image"> -->
+                    <span>MAKE</span>
                 </a>
                 <div class="text-description">
                     <h3>Make</h3>
@@ -510,7 +518,8 @@
             <!-- Trust and Support Network (TSN) -->
             <div class="bubble smaller" id="TrustandSupportNetworkTSN">
                 <a href="https://www.epfl.ch/campus/community/trust-and-support-network/">
-                    <img src="logo\Trust-support-network-epfl-.png" alt="Image">
+                    <!-- <img src="logo\Trust-support-network-epfl-.png" alt="Image"> -->
+                    <span>TSN</span>
                 </a>
                 <div class="text-description">
                     <h3>Trust and Support Network (TSN)</h3>
@@ -523,7 +532,8 @@
             <!-- Guided meditation -->
             <div class="bubble smaller" id="Guidedmeditation">
                 <a href="https://www.epfl.ch/campus/spiritual-care/activites/meditation/">
-                    <img src="logo\meditation.png" alt="Image">
+                    <!-- <img src="logo\meditation.png" alt="Image"> -->
+                    <span>Guided meditation</span>
                 </a>
                 <div class="text-description">
                     <h3>Guided meditation</h3>
@@ -537,6 +547,7 @@
                 <a
                     href="https://www.google.com/maps/place/For%C3%AAt+de+Dorigny/@46.5233077,6.578139,15z/data=!4m2!3m1!1s0x0:0x72d0e6ee0ae1dd4c?sa=X&ved=2ahUKEwiqx5nplcL-AhVPhf0HHTw7AHwQ_BJ6BAhVEAg">
                     <img src="logo\forest.png" alt="Image">
+                    <!-- <span>Dorigny Forest</span> -->
                 </a>
                 <div class="text-description">
                     <h3>Forêt de Dorigny</h3>
