--- a/website3.html
+++ b/website3.html
@@ -26,7 +26,7 @@
                             easily accessible to all.</p>
             </div>
             <div class="image">
-                <img src="logo/EPFL background.jpg" alt="Image">
+                <img src="logo/poster.png" alt="Image">
             </div>
         </div>
     </div>
