--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 </p>
             </div>
             <div class="image">
-                <img src="logo/EPFL background.jpg" alt="Image">
+                <img src="logo/transparent bubbles.png" alt="Image">
             </div>
         </div>
     </div>
