--- a/website4.html
+++ b/website4.html
@@ -102,7 +102,7 @@
         <!-- Category 2 : At Your Service-->
         <div class="bubble" id="bubble2">
             <img src="logo\Services.png" alt="Image">
-            <span>At Your Service</span>
+            <span>Enjoy Services</span>
             <div class="border" id="border2"></div>
             <!-- Coaching Sustainability -->
             <div class="bubble smaller" id="CoachingSustainability">
