--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
                 <a
                     href="https://www.epfl.ch/about/sustainability/fr/durabilite-dans-leducation/programmes-detudes-cours-et-moocs/">
                     <!-- <img src="logo\EPFL courses.png" alt="Image"> -->
-                    <span>EPFL Courses</span>
+                    <span>EPFL</span>
+                    <span>Courses</span>
                 </a>
                 <div class="text-description">
                     <h3>EPFL Courses</h3>
@@ -113,7 +114,7 @@
             <div class="bubble smaller" id="CoachingSustainability">
                 <a href="https://people.epfl.ch/michka.melo">
                     <!-- <img src="logo\Coaching sustainability.png" alt="Image"> -->
-                    <span>Coaching in sustainability</span>
+                    <span>Coaching in Sustainability</span>
                 </a>
                 <div class="text-description">
                     <h3>Coaching in sustainability</h3>
@@ -152,7 +153,8 @@
             <div class="bubble smaller" id="Pointvélo">
                 <a href="https://www.epfl.ch/campus/mobility/mobility-and-travel/commuting/point-velo/">
                     <!-- <img src="logo\point velo title.png" alt="Image"> -->
-                    <span>Point Vélo</span>
+                    <span>Point</span>
+                    <span>Vélo</span>
                 </a>
                 <div class="text-description">
                     <h3>Point Vélo</h3>
@@ -218,7 +220,8 @@
             <div class="bubble smaller" id="PointSmartCellphones">
                 <a href="https://www.epfl.ch/about/sustainability/sustainable-it/point-smart/">
                     <!-- <img src="logo\point smart title.png" alt="Image"> -->
-                    <span>Point Smart</span>
+                    <span>Point</span>
+                    <span>Smart</span>
                 </a>
                 <div class="text-description">
                     <h3>Point Smart (Cellphones)</h3>
@@ -532,7 +535,8 @@
             <div class="bubble smaller" id="Guidedmeditation">
                 <a href="https://www.epfl.ch/campus/spiritual-care/activites/meditation/">
                     <!-- <img src="logo\meditation.png" alt="Image"> -->
-                    <span>Guided meditation</span>
+                    <span>Guided</span>
+                    <span>meditation</span>
                 </a>
                 <div class="text-description">
                     <h3>Guided meditation</h3>
