--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
                 </p>
             </div>
             <div class="image">
-                <img src="logo/transparent bubbles.png" alt="Image">
+                <a href="#content">
+                    <img src="logo/transparent bubbles 2.png" alt="Image">
+                </a>
             </div>
         </div>
     </div>
