--- a/button_Fr.html
+++ b/button_Fr.html
@@ -3,151 +3,92 @@
 
 <head>
     <style>
-        .switch {
-            position: relative;
+
+        /* Custom dropdown */
+        @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,700);
+        .dropdown {
+            width: 70px;
             display: inline-block;
-            margin: 0 5px;
-        }
-
-        .switch>span {
-            position: absolute;
-            top: 14px;
-            pointer-events: none;
-            font-family: 'SuisseIntl';
-            font-weight: bold;
-            font-size: 12px;
-            text-transform: uppercase;
-            text-shadow: 0 1px 0 rgba(0, 0, 0, .06);
-            width: 50%;
-            text-align: center;
-        }
-
-        input.check-toggle-round-flat:checked~.off {
-            color: #007480;
-        }
-
-        input.check-toggle-round-flat:checked~.on {
-            color: #fff;
-        }
-
-        .switch>span.on {
-            left: 0;
-            padding-left: 2px;
-            color: #007480;
-        }
-
-        .switch>span.off {
-            right: 0;
-            padding-right: 4px;
-            color: #fff;
-        }
-
-        .check-toggle {
-            position: absolute;
-            margin-left: -9999px;
-            visibility: hidden;
-        }
-
-        .check-toggle+label {
-            display: block;
+            padding-top: 15px;
+            padding-bottom:15px;
+            margin: 0 0px;
             position: relative;
-            cursor: pointer;
-            outline: none;
-            -webkit-user-select: none;
-            -moz-user-select: none;
-            -ms-user-select: none;
-            user-select: none;
         }
-        /* Hide the checkbox input */
-        input.check-toggle-round-flat {
-            display: none;
+        .dropdown a {
+            text-decoration: none;
+            color: black;
         }
-
-        input.check-toggle-round-flat+label {
+        .dropdown>a::after,
+        .dropdown ul {
+            list-style-type: none;
             display: block;
-            position: relative;
-            cursor: pointer;
-            outline: none;
-            -webkit-user-select: none;
-            -moz-user-select: none;
-            -ms-user-select: none;
-            user-select: none;
-            padding: 2px;
-            width: 97px;
-            height: 35px;
-            background-color: #007480;
-            -webkit-border-radius: 60px;
-            -moz-border-radius: 60px;
-            -ms-border-radius: 60px;
-            -o-border-radius: 60px;
-            border-radius: 60px;
-        }
-
-        input.check-toggle-round-flat+label:before,
-        input.check-toggle-round-flat+label:after {
-            display: block;
+            margin: 0;
+            padding-top: 15px;
+            margin-left: -10px;
             position: absolute;
-            content: "";
+            width: 100%;
+            box-shadow: 0 6px 5px -5px rgba(0, 0, 0, 0.3);
+            overflow: hidden;
         }
 
-        input.check-toggle-round-flat+label:before {
-            top: 2px;
-            left: 2px;
-            bottom: 2px;
-            right: 2px;
-            background-color: #007480;
-            -webkit-moz-border-radius: 60px;
-            -ms-border-radius: 60px;
-            -o-border-radius: 60px;
-            border-radius: 60px;
+        .dropdown li {
+            height: 0;
+            overflow: hidden;
+            transition: all 500ms;
         }
 
-        input.check-toggle-round-flat+label:after {
-            top: 4px;
-            left: 4px;
-            bottom: 4px;
-            width: 48px;
-            background-color: #fff;
-            -webkit-border-radius: 52px;
-            -moz-border-radius: 52px;
-            -ms-border-radius: 52px;
-            -o-border-radius: 52px;
-            border-radius: 52px;
-            -webkit-transition: margin 0.2s;
-            -moz-transition: margin 0.2s;
-            -o-transition: margin 0.2s;
-            transition: margin 0.2s;
+        .dropdown.hover li {
+            transition-delay: 300ms;
         }
 
-        input.check-toggle-round-flat:checked+label {
-
+        .dropdown li:first-child a {
+            border-radius: 2px 2px 0 0;
         }
 
-        input.check-toggle-round-flat:checked+label:after {
-            margin-left: 44px;
+        .dropdown li:last-child a {
+            border-radius: 0 0 2px 2px;
         }
+
+        .dropdown li:hover {
+            background-color: #EEE;
+            color: #666;
+        }
+
+        .dropdown>li:hover::after{
+            border-top-color: #AAA;
+        }
+
+        .dropdown.hover:hover li{
+            height: 40px;
+        }
+
+
+        /* Custom dropdown */
     </style>
 
 </head>
 
 <body>
+    <h2>CSS Dropdown Menu</h2>
+    <nav>
+        <div class="dropdown hover">
+            <a style="left: 50px;">Language</a>
+            <ul>
+                <li><a href="#">English</a></li>
+                <li><a href="#">Francais</a></li>
+            </ul>
+        </div>
+    </nav>
 
-    <div class="switch">
-        <input id="language-toggle" class="check-toggle check-toggle-round-flat" type="checkbox">
-        <label for="language-toggle" class="toggle-label"></label>
-        <span class="on">En</span>
-        <span class="off" onclick="toggleLabelClick()">Fr</span>
-    </div>
     <script>
-        function toggleLabelClick() {
-            const checkbox = document.getElementById("language-toggle");
-            if (!checkbox.checked) {
-                const label = document.querySelector(".toggle-label");
-                label.click(); // Trigger click on the associated label
+        $(document).click(function (event) {
+            if (
+                $('.toggle > input').is(':checked') &&
+                !$(event.target).parents('.toggle').is('.toggle')
+            ) {
+                $('.toggle > input').prop('checked', false);
             }
-        }
-
-
+        })
     </script>
 </body>
 
