--- a/button_Fr.html
+++ b/button_Fr.html
@@ -3,38 +3,65 @@
 
 <head>
     <style>
-
         /* Custom dropdown */
-        @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,700);
         .dropdown {
-            width: 70px;
+            width: 120px;
             display: inline-block;
-            padding-top: 15px;
-            padding-bottom:15px;
-            margin: 0 0px;
+            margin-right: 10px;
             position: relative;
         }
-        .dropdown a {
-            text-decoration: none;
-            color: black;
+
+        .dropdown.toggle>input {
+            display: none;
         }
+
+        .dropdown>a,
+        .dropdown.toggle>label {
+            border-radius: 2px;
+            box-shadow: 0 6px 5px -5px rgba(0, 0, 0, 0.3);
+        }
+
         .dropdown>a::after,
+        .dropdown.toggle>label::after {
+            content: "";
+            float: right;
+            margin: 15px 15px 0 0;
+            width: 0;
+            height: 0;
+            border-left: 5px solid transparent;
+            border-right: 5px solid transparent;
+            border-top: 10px solid #CCC;
+        }
+
         .dropdown ul {
             list-style-type: none;
             display: block;
             margin: 0;
-            padding-top: 15px;
-            margin-left: -10px;
+            padding: 0;
             position: absolute;
             width: 100%;
             box-shadow: 0 6px 5px -5px rgba(0, 0, 0, 0.3);
             overflow: hidden;
         }
 
+        .dropdown a,
+        .dropdown.toggle>label {
+            display: block;
+            padding: 0 0 0 10px;
+            text-decoration: none;
+            line-height: 40px;
+            font-size: 13px;
+            text-transform: uppercase;
+            font-weight: bold;
+            color: #999;
+            background-color: #FFF;
+        }
+
         .dropdown li {
             height: 0;
             overflow: hidden;
             transition: all 500ms;
+
         }
 
         .dropdown.hover li {
@@ -49,19 +76,37 @@
             border-radius: 0 0 2px 2px;
         }
 
-        .dropdown li:hover {
+        .dropdown li:first-child a::before {
+            content: "";
+            display: block;
+            position: absolute;
+            width: 0;
+            height: 0;
+            border-left: 10px solid transparent;
+            border-right: 10px solid transparent;
+            border-bottom: 10px solid #FFF;
+            margin: -10px 0 0 30px;
+        }
+
+        .dropdown a:hover,
+        .dropdown.toggle>label:hover,
+        .dropdown.toggle>input:checked~label {
             background-color: #EEE;
             color: #666;
         }
 
-        .dropdown>li:hover::after{
+        .dropdown.toggle>label:hover::after,
+        .dropdown.toggle>input:checked~label::after {
             border-top-color: #AAA;
         }
 
-        .dropdown.hover:hover li{
+        .dropdown.toggle>input:checked~ul li {
             height: 40px;
         }
 
+        .dropdown.toggle>input:checked~ul li:first-child {
+            padding-top: 15px;
+        }
 
         /* Custom dropdown */
     </style>
@@ -69,16 +114,14 @@
 </head>
 
 <body>
-    <h2>CSS Dropdown Menu</h2>
-    <nav>
-        <div class="dropdown hover">
-            <a style="left: 50px;">Language</a>
-            <ul>
-                <li><a href="#">English</a></li>
-                <li><a href="#">Francais</a></li>
-            </ul>
-        </div>
-    </nav>
+    <div class="dropdown toggle">
+        <input id="t1" type="checkbox" unchecked>
+        <label for="t1">Language</label>
+        <ul>
+            <li><a href="#">English</a></li>
+            <li><a href="#">Francais</a></li>
+        </ul>
+    </div>
 
     <script>
         $(document).click(function (event) {
