--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>EPFL/UNIL Sustainability Resources</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/40cbf1602d.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -14,7 +15,14 @@
                 EPFL Sustainability Resources
             </div>
             <div class="lang">
-                <span> EN / FR</span>
+                <div class="dropdown toggle">
+                    <input id="t1" type="checkbox" unchecked>
+                    <label for="t1">Language</label>
+                    <ul>
+                        <li><a href="#">English</a></li>
+                        <li><a href="#">Francais</a></li>
+                    </ul>
+                </div>
             </div>
         </div>
         <div class="appetizer">
@@ -561,6 +569,16 @@
             </div>
         </div>
     </div>
+    <script>
+        $(document).click(function (event) {
+            if (
+                $('.toggle > input').is(':checked') &&
+                !$(event.target).parents('.toggle').is('.toggle')
+            ) {
+                $('.toggle > input').prop('checked', false);
+            }
+        })
+    </script>
 </body>
 
 </html>
