--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div class="text">
                 <h1>Discover sustainability on your campus!</h>
                 <p>There are many resources & staff available for students on EPFL campus regarding sustainability.
-                    This website, built by students (Mehdi El Bouari & Ke Li, 2023), aims to provide a comprehensive
+                    This website, built by students <i>(Mehdi El Bouari & Ke Li, 2023)</i>, aims to provide a comprehensive
                     list of these resources, and to make them easily accessible to all.
                 </p>
                 <p>To get in touch with the sustainability education team about this site or for other reasons, don’t
