coaching sustainability moved

--- a/index.html
+++ b/index.html
@@ -28,18 +28,20 @@
         <div class="appetizer">
             <div class="text">
                 <h1>Discover sustainability on your campus!</h>
-                <p>There are many resources & staff available for students on EPFL campus regarding sustainability.
-                    This website, built by students <i>(Mehdi El Bouari & Ke Li, 2023)</i>, aims to provide a comprehensive
-                    list of these resources, and to make them easily accessible to all.
-                </p>
-                <p>To get in touch with the sustainability education team about this site or for other reasons, don’t
-                    hesitate to contact <a href="mailto:sustainability@epfl.ch">sustainability@epfl.ch</a> for
-                    more information!
-                </p>
+                    <p>There are many resources & staff available for students on EPFL campus regarding sustainability.
+                        This website, built by students <i>(Mehdi El Bouari & Ke Li, 2023)</i>, aims to provide a
+                        comprehensive
+                        list of these resources, and to make them easily accessible to all.
+                    </p>
+                    <p>To get in touch with the sustainability education team about this site or for other reasons,
+                        don’t
+                        hesitate to contact <a href="mailto:sustainability@epfl.ch">sustainability@epfl.ch</a> for
+                        more information!
+                    </p>
             </div>
             <div class="image">
                 <a href="#content">
-                    <img src="logo/transparent bubbles 2.png" alt="Image">
+                    <img src="logo/transparent bubbles.png" alt="Image">
                 </a>
             </div>
         </div>
@@ -114,12 +116,6 @@
                     of sustainability and ecological issues.
                 </div>
             </div>
-        </div>
-        <!-- Category 2 : Enjoy Services-->
-        <div class="bubble" id="bubble2">
-            <img src="logo\Services.png" alt="Image">
-            <span>Enjoy Services</span>
-            <div class="border" id="border2"></div>
             <!-- Coaching in sustainability -->
             <div class="bubble smaller" id="CoachingSustainability">
                 <a href="https://people.epfl.ch/michka.melo">
@@ -132,6 +128,12 @@
                     sustainability during their studies or once they graduate.
                 </div>
             </div>
+        </div>
+        <!-- Category 2 : Enjoy Services-->
+        <div class="bubble" id="bubble2">
+            <img src="logo\Services.png" alt="Image">
+            <span>Enjoy Services</span>
+            <div class="border" id="border2"></div>
             <!-- association débouchés durables -->
             <div class="bubble smaller" id="associationdébouchésdurables">
                 <a href="https://debouches-durables.unipoly.ch/#:~:text=Qui%20sommes%2Dnous%20%3F,des%20%C3%A9tudiant.">
