--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 <html>
 
 <head>
-    <title>EPFL/UNIL Sustainability Resources</title>
+    <title>EPFL Sustainability Resources</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
-    <script src="https://kit.fontawesome.com/40cbf1602d.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -20,7 +19,7 @@
                     <label for="t1">Language</label>
                     <ul>
                         <li><a href="#">English</a></li>
-                        <li><a href="#">Francais</a></li>
+                        <li><a href="index_fr.html">Francais</a></li>
                     </ul>
                 </div>
             </div>
