--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </div>
             <div class="image">
                 <a href="#content">
-                    <img src="logo/transparent bubbles.png" alt="Image">
+                    <img src="logo/transparent bubbles 3.png" alt="Image">
                 </a>
             </div>
         </div>
