--- a/auto_website.html
+++ b/auto_website.html
@@ -39,29 +39,31 @@
                         more information!
                     </p>
             </div>
-            <div class="container" id="subbubbles">
-
+            <div class="subbubble-container" id="subbubbles">
+                <div class="midcontainer" id="upper_subbubbles">
                     <div class="sub-bubble" id="subbubble1">
                         <img src="logo\Apprendre.png" alt="Image">
                         <span>Inform Yourself</span>
-                    </div>
-                    <div class="sub-bubble" id="subbubble2">
-                        <img src="logo\Services.png" alt="Image">
-                        <span>Enjoy Services</span>
                     </div>
                     <div class="sub-bubble" id="subbubble3">
                         <img src="logo\Community.png" alt="Image">
                         <span>Take Action</span>
                     </div>
-                    <div class="sub-bubble" id="subbubble4">
-                        <img src="logo\Startup.png" alt="Image">
-                        <span>Launch Your Project</span>
-                    </div>
                     <div class="sub-bubble" id="subbubble5">
                         <img src="logo\Sain.png" alt="Image">
                         <span>Take Care</span>
                     </div>
-
+                </div>
+                <div class="midcontainer" id="lower_subbubbles">
+                    <div class="sub-bubble" id="subbubble2">
+                        <img src="logo\Services.png" alt="Image">
+                        <span>Enjoy Services</span>
+                    </div>
+                    <div class="sub-bubble" id="subbubble4">
+                        <img src="logo\Startup.png" alt="Image">
+                        <span>Launch Your Project</span>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
