--- a/index.html
+++ b/index.html
@@ -28,14 +28,16 @@
         <div class="appetizer">
             <div class="text">
                 <h1>Discover sustainability on your campus!</h>
-                <p>There are many resources & staff available for students on EPFL campus regarding sustainability.
-                    This website, built by students <i>(Mehdi El Bouari & Ke Li, 2023)</i>, aims to provide a comprehensive
-                    list of these resources, and to make them easily accessible to all.
-                </p>
-                <p>To get in touch with the sustainability education team about this site or for other reasons, don’t
-                    hesitate to contact <a href="mailto:sustainability@epfl.ch">sustainability@epfl.ch</a> for
-                    more information!
-                </p>
+                    <p>There are many resources & staff available for students on EPFL campus regarding sustainability.
+                        This website, built by students <i>(Mehdi El Bouari & Ke Li, 2023)</i>, aims to provide a
+                        comprehensive
+                        list of these resources, and to make them easily accessible to all.
+                    </p>
+                    <p>To get in touch with the sustainability education team about this site or for other reasons,
+                        don’t
+                        hesitate to contact <a href="mailto:sustainability@epfl.ch">sustainability@epfl.ch</a> for
+                        more information!
+                    </p>
             </div>
             <div class="subbubble-container" id="subbubbles">
                 <div class="midcontainer" id="upper_subbubbles">
@@ -63,6 +65,15 @@
                     </div>
                 </div>
             </div>
+        </div>
+        <div class="arrow">
+            <a href="#content" onclick="scrollToContent()">
+                <svg id="more-arrows">
+                    <polygon class="arrow-top" points="18.8,13.95 0.9,0.65 1.65,0 18.8,12.65 35.95,0 36.85,0.65 " />
+                    <polygon class="arrow-middle" points="18.8,22.9	0.4,9.35 2.2,8.2 18.8,20.6 35.6,8.2 37.25,9.35" />
+                    <polygon class="arrow-bottom" points="18.8,32 0,18.05 2.55,16.4 18.8,28.4 35.2,16.4 37.75,18.05" />
+                </svg>
+            </a>
         </div>
     </div>
     <div class="container" id="content">
