--- a/test.html
+++ b/test.html
@@ -5,87 +5,64 @@
     <meta charset="utf-8" />
     <title>Homepage</title>
     <style type="text/css">
+        /* Markup */
         body {
-            margin: 0;
-            padding: 0;
+            background-color: #3daa1f;
         }
 
-        .page {
+        .arrow {
             position: absolute;
-            width: 100vw;
-            height: 100vh;
-            z-index: 1;
-            display: flex;
-            align-items: center;
-            justify-content: center;
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%, -50%);
         }
 
-        .usage {
-            position: absolute;
-            top: 40px;
-            line-height: 50px;
-            z-index: 1000;
-            color: white;
-            font-size: 20px;
-            width: 100%;
-            text-align: center;
-            font-family: "Arial Black", Gadget, sans-serif;
-            pointer-events: none;
+        .arrow p {
+            margin: 0 0 20px;
         }
 
-        h1 {
-            color: white;
-            font-family: arial;
-            font-weight: bold;
-            font-size: 3em;
+        /* Arrow & Hover Animation */
+        #more-arrows {
+            width: 75px;
+            height: 65px;
+        }
+
+        #more-arrows:hover polygon {
+            fill: #FFF;
+            transition: all .2s ease-out;
+        }
+
+        #more-arrows:hover polygon.arrow-bottom {
+            transform: translateY(-18px);
+        }
+
+        #more-arrows:hover polygon.arrow-top {
+            transform: translateY(18px);
+        }
+
+        polygon {
+            fill: #FFF;
+            transition: all .2s ease-out;
+        }
+
+        polygon.arrow-middle {
+            opacity: 0.75;
+        }
+
+        polygon.arrow-top {
+            opacity: 0.5;
         }
     </style>
 </head>
 
 <body>
-    <div class="page" style="background-color:#38a8cc">
-        <h1>Page 1</h1>
+    <div class="arrow">
+        <svg id="more-arrows">
+            <polygon class="arrow-top" points="37.6,27.9 1.8,1.3 3.3,0 37.6,25.3 71.9,0 73.7,1.3 " />
+            <polygon class="arrow-middle" points="37.6,45.8 0.8,18.7 4.4,16.4 37.6,41.2 71.2,16.4 74.5,18.7 " />
+            <polygon class="arrow-bottom" points="37.6,64 0,36.1 5.1,32.8 37.6,56.8 70.4,32.8 75.5,36.1 " />
+        </svg>
     </div>
-    <div class="page" style="background-color:#004444">
-        <h1>Page 2</h1>
-    </div>
-    <div class="page" style="background-color:#884444">
-        <h1>Page 3</h1>
-    </div>
-    <div class="page" style="background-color:#555588">
-        <h1>Page 4</h1>
-    </div>
-    <div class="page" style="background-color:#a84466">
-        <h1>Page 5</h1>
-    </div>
-
-    <!-- Include jQuery and Anime.js libraries -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script>
-
-    <script>
-        $('.page').each(function (i, e) {
-            $(this).click(function (event) {
-                var x = event.pageX;
-                var y = event.pageY;
-
-                var nextItem = i + 1;
-                if (nextItem >= $('.page').length) {
-                    nextItem = 0;
-                }
-
-                $('.page:eq(' + nextItem + ')').css('z-index', parseInt($(this).css('z-index')) + 1);
-                $('.page:eq(' + nextItem + ')').css('clip-path', 'circle(0% at ' + x + 'px ' + y + 'px)');
-
-                anime({
-                    targets: '.page:eq(' + nextItem + ')',
-                    update: function (anim) {
-                        $('.page:eq(' + nextItem + ')').css('clip-path', 'circle(' + (anim.progress * 2) + '% at ' + x + 'px ' + y + 'px)');
-                    }
-                });
-            });
-        });
-    </script>
 </body>
 
 </html>
